--- a/sui/Move.toml
+++ b/sui/Move.toml
@@ -6,7 +6,7 @@ authors = ["David Lucid <david@pentagon.xyz>"]
 [addresses]
 std = "0x1"
 sui = "0x2"
-Multiture = "0x0"
+multiture = "0x0"
 
 [dependencies.MoveStdlib]
 git = "https://github.com/MystenLabs/sui.git"
