Upgrade Aptos framework

--- a/aptos/Move.toml
+++ b/aptos/Move.toml
@@ -4,16 +4,26 @@ version = "1.0.0"
 authors = ["David Lucid <david@pentagon.xyz>"]
 
 [addresses]
-Std = "0x1"
-AptosFramework = "0x1"
-Multiture = "0x0"
+std = "0x1"
+aptos_framework = "0x1"
+multiture = "0x0"
 
 [dependencies.MoveStdlib]
 git = "https://github.com/aptos-labs/aptos-core.git"
 subdir = "aptos-move/framework/move-stdlib"
-rev = "6538efd8bf4b37c61ec0427243e864ee038df5e8"
+rev = "b718154c93b3556658c8c06341be0cf47957188c"
+
+[dependencies.AptosStdlib]
+git = "https://github.com/aptos-labs/aptos-core.git"
+subdir = "aptos-move/framework/aptos-stdlib"
+rev = "b718154c93b3556658c8c06341be0cf47957188c"
 
 [dependencies.AptosFramework]
 git = "https://github.com/aptos-labs/aptos-core.git"
 subdir = "aptos-move/framework/aptos-framework"
-rev = "6538efd8bf4b37c61ec0427243e864ee038df5e8"
+rev = "b718154c93b3556658c8c06341be0cf47957188c"
+
+[dependencies.AptosToken]
+git = "https://github.com/aptos-labs/aptos-core.git"
+subdir = "aptos-move/framework/aptos-token"
+rev = "b718154c93b3556658c8c06341be0cf47957188c"
